Fix navbar displaying weirdly on mobile And attempt to fix lineheight on mobile.

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
 }
 h1, h2{
 	font-family: 'Arcane-Nine';
+	line-height: 100%;
 }
 @font-face{
 	font-family: "Bolton";
@@ -101,6 +102,10 @@ h1, h2{
 	overflow: auto; */
 	/* display:block; */
 	/* transform: scale(2.0); */
+}
+.navbar .nav-null-space{
+	max-width: 100px;
+	width: 100%;
 }
 .navbar button{
 	background-color: #938778;
@@ -185,6 +190,7 @@ h1, h2{
 
 .wrapper .content h1,h2{
 	font-size:60px;
+	line-height: 60px;
 	margin: 0 0;
 	padding: 0px 50px;
 }
@@ -197,8 +203,7 @@ h1, h2{
 	color: rgb(216, 134, 57);
 }
 .wrapper .content{
-	/* font-family: Titania; */
-	font-family: "Bolton", "Titania";
+	font-family: "Bolton", "Times New Roman";
 	font-size: 22px;
 	line-height: 22px;
 	
@@ -225,7 +230,6 @@ section{
 	font-size: 22px;
 	/* font-weight: lighter; */
 	/* font-stretch:extra-expanded; */
-	font-kerning: 700px;
 	
 	/* font-variant: small-caps; */
 }
@@ -239,7 +243,14 @@ section{
 	.navbar ul{
 		font-size: 32px;
 	}
+	.navbar .nav-null-space{
+		width: 0px;
+	}
 }
+/* @media screen and (max-width: 600px){
+	.navbar .nav-null-space{
+	}
+} */
 .wrapper .content .right-column {
 	margin-left: 0 auto;
 	object-fit: contain;
